deploy/kubernetes-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abeeway-api-configurationmanager-v1-app
  labels:
    app: abeeway-api-configurationmanager-v1-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abeeway-api-configurationmanager-v1-app
  template:
    metadata:
      labels:
        app: abeeway-api-configurationmanager-v1-app
    spec:
      containers:
        - name: abeeway-api-configurationmanager-v1
          image: abeeway/configuration_manager:latest
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: abeeway-api-configurationmanager-v1-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: abeeway-api-configurationmanager-v1-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abeeway-api-configurationmanager-v1-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - secretName: abeeway-configurationmanager-cert
  rules:
  - host: [Your URI]
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: abeeway-api-configurationmanager-v1-service
            port:
              number: 80
